--- a/.github/workflows/spuc-build-test-push.yaml
+++ b/.github/workflows/spuc-build-test-push.yaml
@@ -31,6 +31,9 @@ jobs:
     - name: Check out the repo
       uses: actions/checkout@v4
 
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v3
+
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
 
@@ -56,6 +59,7 @@ jobs:
         context: ${{ env.CONTEXT }}
         file: ${{ env.DOCKERFILE }}
         tags: ${{ steps.set-tag.outputs.tags }}
+        platforms: linux/amd64,linux/arm64
         cache-from: type=gha,scope=${{ env.CONTAINER_NAME }}
         cache-to: type=gha,scope=${{ env.CONTAINER_NAME }},mode=max
         push: true
